--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.42.6",
     "svelte-check": "^2.2.6",
+    "svelte-local-storage-store": "^0.2.4",
     "svelte-preprocess": "^4.9.4",
     "tailwindcss": "^2.2.17",
     "tslib": "^2.3.1",
@@ -30,7 +31,6 @@
   },
   "type": "module",
   "dependencies": {
-    "sass": "^1.43.3",
-    "svelte-local-storage-store": "^0.2.4"
+    "sass": "^1.43.3"
   }
 }
