--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"svelte-check": "^2.2.6",
 		"svelte-local-storage-store": "^0.2.4",
 		"svelte-preprocess": "^4.9.4",
+		"svelte-typeahead": "^4.2.1",
 		"tailwindcss": "^2.2.17",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
