--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.55",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/forms": "^0.3.4",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
