--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,4 +24,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: plus:latest
+          tags: registry.lahs.club/plus:latest
